# sdl_practice

./: CMakeLists.txt  sdlttf_test.cpp
